@@ -16,6 +16,7 @@ TRUNK
 -   mod_cron: One module to rule all the periodic tasks
 -   mod_admin_shell: New home of the Console admin interface
 -   mod_admin_socket: Enable secure connections to the Console
+-   mod_tombstones: Prevent registration of deleted accounts
 
 ### Security and authentication
 
